2006-11-23  Yen-Ju Chen <yjchen at gmail>

	* MPlayer: subclass MPlayerInterface to avoid polluting original code.

2006-11-19  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile: Updated to include etoile.make. 

2006-11-18  Yen-Ju Chen <yjchen at gmail>

	* Add mixer.
	* Add COPYING for MPlayerInterface and COPYING.LIB for the rest.
	* Add -setVolumeInPercentage: and -volumeInPercentage 
          in MMPlayer protocol and add implementation in MPlayerInterface.

2006-11-04  Yen-Ju Chen <yjchen at gmail>

	* Initial import.
	* Fix nil property.
