@@ -1,0 +1,7 @@
+#import <MultimediaKit/MMPlayer.h>
+
+NSString *const MMPlayerStartPlayingNotification = @"MMPlayerStartPlayingNotification";
+NSString *const MMPlayerPausedNotification = @"MMPlayerPausedNotification";
+NSString *const MMPlayerStopNotification = @"MMPlayerStopNotification";
+NSString *const MMPlayerInformationAvailableNotification = @"MMPlayerInformationAvailableNotification";
+
