@@ -1,6 +1,7 @@
 2006-11-23  Yen-Ju Chen <yjchen at gmail>
 
 	* MPlayer: subclass MPlayerInterface to avoid polluting original code.
+	* Use notification for player status and information of movie.
 
 2006-11-19  Quentin Mathe <qmathe@club-internet.fr>
 
